# pyviz-tutorial-de

./: .gitignore  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  Pipfile  README.rst  constraints.txt  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  pre-commit.yml
docs/: 404.rst  conf.py  constraints.txt  index.rst  overview.rst  requirements.txt
docs/_templates/: training.html
docs/bokeh/: annotations.ipynb  bokeh-server.ipynb  data-sources-transformations.ipynb  directory-format-apps.ipynb  extend.ipynb  geographic-plots.ipynb  graph.ipynb  index.rst  interactions.ipynb  links.rst  styling-theming.ipynb
docs/bokeh/embedding-export/: export-html.ipynb  flask.rst  notebook.ipynb  static-images.ipynb
docs/bokeh/integration/: datashader.ipynb  index.rst
docs/bokeh/integration/holoviews/: geoviews.ipynb
docs/bokeh/integration/holoviews/hvplot/: examples.ipynb  index.rst  install.rst
docs/d3js/: index.rst
docs/d3js/bqplot/: bq-examples.ipynb  bq-mark-interactions.ipynb  bq-selectors.ipynb  bq-special-widgets.ipynb  index.rst
docs/js/: index.rst  ipyleaflet.ipynb  ipyvolume.ipynb  pythreejs.ipynb  xarray-leaflet.ipynb
docs/matplotlib/: graph-tool.ipynb  graphviz.ipynb  index.rst  iris.rst  mpl-backends.ipynb  mpl-example.ipynb  mpl-install.rst  mpl-scatter-density.ipynb  mpl-scatter-density.rst  networkx.ipynb  yt.rst
docs/matplotlib/cartopy/: examples.ipynb  index.rst  install.rst
docs/matplotlib/geopandas/: example.ipynb  index.rst  install.rst
docs/matplotlib/graphviz/: examples.ipynb  index.rst  libs-tools.rst
docs/matplotlib/pandas/: example.ipynb  index.rst  install.rst
docs/matplotlib/plotnine/: examples.ipynb  index.rst  install.rst
docs/matplotlib/seaborn/: example.ipynb  index.rst  install.rst
docs/opengl/: index.rst
docs/protomaps/: berlin.html  cli.rst  convert.rst  extract.ipynb  index.rst  publish.rst
docs/vega/: altair.ipynb  index.rst
docs/vega/pdvega/: examples.ipynb  index.rst  install.rst
