[project]
name = "pyviz-tutorial"
version = "24.1.0"
authors = [
  { name="Veit Schiele", email="veit@cusy.io" },
]
description = "Schulungsmaterialen für die cusy Python-Schulungen: https://cusy.io/de/seminare"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
docs = [
    "furo",
    "ipython",
    "ipywidgets",
    "matplotlib",
    "nbsphinx",
    "sphinx<8.2",
    "sphinx-inline-tabs",
    "sphinx-lint",
    "sphinx-notfound-page",
    "sphinx_copybutton",
    "sphinxcontrib-svg2pdfconverter",
    "sphinxext.opengraph", # matplotlib is required for social cards
]

dev = [
    "pyviz-tutorial[docs]",
    "pre-commit",
    "codespell",
    "vale",
]

[project.urls]
"Homepage" = "https://github.com/veit/pyviz-tutorial/"
"Bug Tracker" = "https://github.com/veit/pyviz-tutorial/issues"

[tool.setuptools]
packages = []

[tool.codespell]
skip = "*.ipynb, *.rst, *.svg, ./pyviz_tutorial.egg-info/*"
