[project]
name = "pyviz-tutorial"
version = "24.1.0"
description = "Schulungsmaterialen für die cusy Python-Schulungen: https://cusy.io/de/seminare"
readme = "README.rst"
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
authors = [
  { name = "Veit Schiele", email = "veit@cusy.io" },
]
requires-python = ">=3.9"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [  ]

urls."Bug Tracker" = "https://github.com/veit/pyviz-tutorial/issues"
urls."Homepage" = "https://github.com/veit/pyviz-tutorial/"

[dependency-groups]
dev = [
  "codespell",
  "pre-commit",
  "vale",
  { include-group = "docs" },
]
docs = [
  "furo",
  "ipython",
  "ipywidgets",
  "matplotlib",
  "nbsphinx",
  "sphinx<8.2",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinx-lint",
  "sphinx-notfound-page",
  "sphinx-sitemap",
  "sphinxcontrib-svg2pdfconverter",
  "sphinxext-opengraph",            # matplotlib is required for social cards
]

[tool.setuptools]
packages = [  ]

[tool.codespell]
skip = "*.ipynb, *.rst, *.svg, ./pyviz_tutorial.egg-info/*"
